[package]
name = "discord_api_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
futures-util = "0.3.28"
native-tls = "0.2.11"
reqwest = "0.11.18"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread", "sync"] }
tokio-tungstenite = { version = "0.19.0", features = [
    "tokio-native-tls",
    "native-tls",
] }
